k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actimize
  labels:
    app.kubernetes.io/part-of: actimize-platform
